--- a/.github/workflows/add_identifiers.yml
+++ b/.github/workflows/add_identifiers.yml
@@ -14,6 +14,10 @@ jobs:
     needs: validate
     runs-on: macos-12
     steps:
+      # Uncomment to manually select latest Xcode if needed
+      #- name: Select Latest Xcode
+      #  run: "sudo xcode-select --switch /Applications/Xcode_13.0.app/Contents/Developer"
+      
       # Checks-out the repo
       - name: Checkout Repo
         uses: actions/checkout@v4
