--- a/.github/workflows/create_certs.yml
+++ b/.github/workflows/create_certs.yml
@@ -10,24 +10,17 @@ jobs:
     secrets: inherit
   
   certificates:
-<<<<<<< HEAD
-    needs: secrets
-    runs-on: macos-14
-=======
     name: Create Certificates
     needs: validate
     runs-on: macos-12
->>>>>>> dev
     steps:
+      # Uncomment to manually select latest Xcode if needed
+      #- name: Select Latest Xcode
+      #  run: "sudo xcode-select --switch /Applications/Xcode_13.0.app/Contents/Developer"
+      
       # Checks-out the repo
       - name: Checkout Repo
         uses: actions/checkout@v4
-<<<<<<< HEAD
-        
-      # Patch Fastlane Match to not print tables
-      - name: Patch Match Tables
-        run: find /usr/local/lib/ruby/gems -name table_printer.rb | xargs sed -i "" "/puts(Terminal::Table.new(params))/d"
-=======
       
       # Patch Fastlane Match to not print tables
       - name: Patch Match Tables
@@ -36,7 +29,6 @@ jobs:
       # Install project dependencies
       - name: Install Project Dependencies
         run: bundle install
->>>>>>> dev
 
       # Sync the GitHub runner clock with the Windows time server (workaround as suggested in https://github.com/actions/runner/issues/2996)
       - name: Sync clock
